--- a/Currency/Currency/pom.xml
+++ b/Currency/Currency/pom.xml
@@ -10,10 +10,15 @@
   <description>Currency</description>
   <distributionManagement>
     <repository>
-      <id>internal.repo</id>
-      <name>Internal repo</name>
-      <url>file:///var/jenkins_home/workspace</url>
+        <id>central</id>
+        <name>852a4029944b-releases</name>
+        <url>http://192.168.213.129:8081/artifactory/wso2esb</url>
     </repository>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>852a4029944b-snapshots</name>
+        <url>http://192.168.213.129:8081/artifactory/wso2esb</url>
+    </snapshotRepository>
   </distributionManagement>
   <properties>
     <CApp.type>bpel/workflow=zip,lib/registry/filter=jar,webapp/jaxws=war,lib/library/bundle=jar,service/dataservice=dbs,synapse/local-entry=xml,synapse/proxy-service=xml,carbon/application=car,registry/resource=zip,lib/dataservice/validator=jar,synapse/endpoint=xml,web/application=war,lib/carbon/ui=jar,service/axis2=aar,synapse/sequence=xml,synapse/configuration=xml,wso2/gadget=dar,lib/registry/handlers=jar,lib/synapse/mediator=jar,synapse/task=xml,synapse/api=xml,synapse/template=xml,synapse/message-store=xml,synapse/message-processors=xml,synapse/inbound-endpoint=xml</CApp.type>
