Added Artifactory distribution repo

--- a/Currency/Currency/pom.xml
+++ b/Currency/Currency/pom.xml
@@ -10,9 +10,9 @@
   <description>Currency</description>
   <distributionManagement>
     <repository>
-        <id>central</id>
-        <name>852a4029944b-releases</name>
-        <url>http://192.168.213.129:8081/artifactory/wso2esb</url>
+      <id>internal.repo</id>
+      <name>Internal repo</name>
+      <url>file:///var/jenkins_home/workspace</url>
     </repository>
     <snapshotRepository>
         <id>snapshots</id>
