--- a/Currency_CAR/Currency_CAR/pom.xml
+++ b/Currency_CAR/Currency_CAR/pom.xml
@@ -10,9 +10,9 @@
   <description>Currency_CAR</description>
   <distributionManagement>
     <repository>
-        <id>central</id>
-        <name>852a4029944b-releases</name>
-        <url>http://192.168.213.129:8081/artifactory/wso2esb</url>
+      <id>central</id>
+      <name>852a4029944b-releases</name>
+      <url>http://192.168.213.129:8081/artifactory/wso2esb</url>
     </repository>
     <snapshotRepository>
       <id>snapshots</id>
@@ -22,6 +22,7 @@
   </distributionManagement>
   <properties>
     <com.example.Currency.endpoint_._CurrencyConvertor_endpoint>capp/EnterpriseServiceBus</com.example.Currency.endpoint_._CurrencyConvertor_endpoint>
+    <com.example.Currency.proxy-service_._loopback>capp/EnterpriseServiceBus</com.example.Currency.proxy-service_._loopback>
     <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,lib/registry/handlers=jar,service/rule=aar,lib/registry/filter=jar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,synapse/api=xml,wso2/gadget=dar,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
     <com.example.Currency.proxy-service_._Currency>capp/EnterpriseServiceBus</com.example.Currency.proxy-service_._Currency>
   </properties>
@@ -35,6 +36,12 @@
     <dependency>
       <groupId>com.example.Currency.endpoint</groupId>
       <artifactId>CurrencyConvertor_endpoint</artifactId>
+      <version>1.0.0</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.example.Currency.proxy-service</groupId>
+      <artifactId>loopback</artifactId>
       <version>1.0.0</version>
       <type>xml</type>
     </dependency>
