Aplicatie noua de SchimbValutar

--- a/ModulePRJ/MavenParentProject/pom.xml
+++ b/ModulePRJ/MavenParentProject/pom.xml
@@ -23,6 +23,7 @@
   <modules>
     <module>../../Currency/Currency</module>
     <module>../../Currency_CAR/Currency_CAR</module>
+    <module>../../SchimbValutar</module>
   </modules>
   <build>
     <plugins>
